--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 
 /.vs/TimeshareExchangeAPI/FileContentIndex/0ee29dbb-2b7e-4bbf-b0a0-45a18c2b9afd.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/36695a51-b473-4674-8d70-ba8231bd46de.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/75437038-ad58-48d4-b59d-ce34535e124f.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/ca99c58a-f443-42d3-bca2-813b71452bd3.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/83986b07-df8d-4db3-9828-b9f228794702.vsidx
