--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /.vs/TimeshareExchangeAPI/FileContentIndex/75437038-ad58-48d4-b59d-ce34535e124f.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/ca99c58a-f443-42d3-bca2-813b71452bd3.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/83986b07-df8d-4db3-9828-b9f228794702.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/642b8c99-dbc0-492f-9812-c3b7ad7269b2.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/c1c481eb-e45e-4c6e-8616-b7710edc331b.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/daab61fa-c6f2-4c67-9e4d-6310786abb48.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/6e9db828-5ce9-4d39-ae2d-556d4a0499f4.vsidx
