Payment GetbyMemId update

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@
 /.vs/TimeshareExchangeAPI/FileContentIndex/c1c481eb-e45e-4c6e-8616-b7710edc331b.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/daab61fa-c6f2-4c67-9e4d-6310786abb48.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/6e9db828-5ce9-4d39-ae2d-556d4a0499f4.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/79c74458-8c7a-41a1-abed-67e231245a51.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/d95bbd15-8fe3-4f51-87df-c7a8677e6c25.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/9b94010f-7107-4634-802e-57b58ae5f6da.vsidx
