--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@
 /.vs/TimeshareExchangeAPI/FileContentIndex/79c74458-8c7a-41a1-abed-67e231245a51.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/d95bbd15-8fe3-4f51-87df-c7a8677e6c25.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/9b94010f-7107-4634-802e-57b58ae5f6da.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/3edd6195-84f0-4436-b38e-8451911cfd57.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/7ebd492c-f771-4b48-bcc4-f72e8572c6a5.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/af1d2fa3-530d-47e9-8ca8-ee8f4ceb8b36.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/b7e85f77-86a7-4541-9945-286793cffabf.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/f5a3bb37-066f-4896-8720-3694ce1bcf28.vsidx
