--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,8 @@
 /.vs/TimeshareExchangeAPI/FileContentIndex/af1d2fa3-530d-47e9-8ca8-ee8f4ceb8b36.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/b7e85f77-86a7-4541-9945-286793cffabf.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/f5a3bb37-066f-4896-8720-3694ce1bcf28.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/08701747-2014-49e6-8618-31d909225d74.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/18685587-af53-445f-982d-3d2d031ca3ca.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/42577fbd-0cc4-48a7-9d7b-630729a4cfdd.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/9cbf9d49-6518-4f58-ab4e-a1bc82ae0bb9.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/d826bd1f-b16d-4906-944c-78951ac71a51.vsidx
