--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,8 @@
 /.vs/TimeshareExchangeAPI/FileContentIndex/42577fbd-0cc4-48a7-9d7b-630729a4cfdd.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/9cbf9d49-6518-4f58-ab4e-a1bc82ae0bb9.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/d826bd1f-b16d-4906-944c-78951ac71a51.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/2dfffda1-da8c-4e69-bb3e-8bab0ccd40ad.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/32861ea8-d635-4726-87f2-ac8e4dbc015c.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/9fdda66b-a3e1-424e-ae99-99f84ec3249a.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/a7603770-2591-4e6c-930d-3a4a65eeac56.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/dc7409c1-4325-4b14-b6ad-c97a8f987570.vsidx
