delate ID and Date of CreatePayment

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,7 @@
 /.vs/TimeshareExchangeAPI/FileContentIndex/9fdda66b-a3e1-424e-ae99-99f84ec3249a.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/a7603770-2591-4e6c-930d-3a4a65eeac56.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/dc7409c1-4325-4b14-b6ad-c97a8f987570.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/41dfc4ba-0fd7-4e8f-ae57-448a914d2946.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/946fa869-435a-436a-89d2-c81b8b0e2cfa.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/fbadf1a8-3ebc-49ec-9d85-d60b204030e0.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/fe026bfa-d238-47aa-92b7-51174a21b2fc.vsidx
