fix GetAll Payment

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /.vs/TimeshareExchangeAPI/FileContentIndex/946fa869-435a-436a-89d2-c81b8b0e2cfa.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/fbadf1a8-3ebc-49ec-9d85-d60b204030e0.vsidx
 /.vs/TimeshareExchangeAPI/FileContentIndex/fe026bfa-d238-47aa-92b7-51174a21b2fc.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/24e3c5a5-a5ad-4ed4-8ac1-988ee7dfcfb7.vsidx
+/.vs/TimeshareExchangeAPI/FileContentIndex/54c31013-b573-4e08-b022-2ec1bc515bb7.vsidx
